# AntiDisinform

./: .gitignore  PLANNING.md  README.md  README1.md  docker-compose.yml  requirements.txt
data/: gpt_integration.py
data/omelas/: chatbot.py  gcp.py  instructions.py  tools.py  utils.py  worker.py
data_sources/: main.py  search_scraper.py
frontend/: Dockerfile  README.md  main.py  pyproject.toml
frontend/frontend/: main.py
frontend/templates/: index.html
mainapi/: Dockerfile  README.md  __init__.py  anthropic_interface.py  instructions.py  loop.py  main.py  pyproject.toml  tool.py  utils.py
test/: test_search_scraper.py
tg_bot/: .env.example  README.md  main.py  pyproject.toml
