[tool.poetry]
name = "mainapi"
version = "0.1.0"
description = ""
authors = ["anilev6 <125677472+anilev6@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
google-search-results = "^2.4.2"
firecrawl = "^1.5.0"
anthropic = "^0.39.0"
google-cloud-bigquery = "^3.19.0"
openai = "^1.52.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
