[tool.poetry]
name = "tg_bot"
version = "0.1.0"
description = ""
authors = ["anilev6 <125677472+anilev6@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
easy-tg-bot = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
